:hammer: Update scrapping file, tests files, api files

--- a/notebooks/test_Antoine.ipynb
+++ b/notebooks/test_Antoine.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,46 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "\n",
-    "url = \"https://api.themoviedb.org/3/find/external_id?external_source=\"\n",
-    "\n",
-    "headers = {\n",
-    "    \"accept\": \"application/json\",\n",
-    "    \"Authorization\": \"Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJjZWY5MGUyOWMzZGQ0ZTg0Y2IzMjdhMWRiMzlhNWY1MSIsIm5iZiI6MTczMTY3MzkyNy4zNDkwNTg0LCJzdWIiOiI2NzI3Y2MwNTU5MTgxMzdjZmMzOTljMmQiLCJzY29wZXMiOlsiYXBpX3JlYWQiXSwidmVyc2lvbiI6MX0.gExSQUL7byxDH4T4WaypusXMFcWOuR4YReVWJMy9wnY\"\n",
-    "}\n",
-    "\n",
-    "response = requests.get(url, headers=headers)\n",
-    "\n",
-    "print(response.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['13622970', '1262426', '9218128', '16539454', '14948432', '0816692', '33428606', '34422601', '27218960', '2347285']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Configurer le logger pour suivre les événements et les erreurs\n",
-    "logging.basicConfig(level=logging.INFO)\n",
-    "logger = logging.getLogger(__name__)\n",
-    "\n",
-    "\n",
     "def scrape_imdb_first_page():\n",
     "    \"\"\"Scrape les données des films depuis IMDb et les renvoie sous forme de listes.\"\"\"\n",
-    "    start_time = time.time()\n",
     "    headers = {\n",
     "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'\n",
     "    }\n",
@@ -79,44 +45,40 @@
     "        cleaned_links = [link.split('/')[2].split('?')[0].replace('tt', '') for link in links]\n",
     "\n",
     "        return cleaned_links\n",
-    "\n",
     "    except requests.RequestException as e:\n",
-    "        logger.error(f\"Erreur lors de la récupération de la page IMDb: {e}\")\n",
-    "\n",
-    "    finally:\n",
-    "        end_time = time.time()\n",
-    "        duration = end_time - start_time\n",
-    "\n",
-    "cleaned_links = scrape_imdb_first_page()\n",
-    "\n",
-    "print(cleaned_links)"
+    "        print(f\"Erreur lors de la récupération de la page IMDb : {e}\")\n",
+    "        return []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def genres_request():\n",
-    "    \"\"\"Effectue des requêtes à l'API TMDB pour récupérer les informations des films.\"\"\"\n",
+    "    \"\"\"Effectue des requêtes à l'API TMDB pour récupérer les informations des genres de films.\"\"\"\n",
     "    url = \"https://api.themoviedb.org/3/genre/movie/list?language=en\"\n",
     "    headers = {\n",
     "        \"accept\": \"application/json\",\n",
     "        \"Authorization\": f\"Bearer {tmdb_token}\"\n",
     "    }\n",
     "\n",
-    "    response = requests.get(url, headers=headers)\n",
+    "    try:\n",
+    "        response = requests.get(url, headers=headers)\n",
+    "        response.raise_for_status()  # Vérifier que la requête a réussi\n",
     "\n",
-    "    if response.status_code == 200:\n",
     "        data = response.json()\n",
     "        genres = {str(genre[\"id\"]): genre[\"name\"] for genre in data[\"genres\"]}\n",
-    "        return genres\n"
+    "        return genres\n",
+    "    except requests.RequestException as e:\n",
+    "        print(f\"Erreur lors de la récupération des genres : {e}\")\n",
+    "        return {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +86,10 @@
     "    \"\"\"Effectue des requêtes à l'API TMDB pour récupérer les informations des films.\"\"\"\n",
     "    results = {}\n",
     "    cleaned_links = scrape_imdb_first_page()\n",
+    "\n",
+    "    if not cleaned_links:  # Vérifier si le scraping a échoué\n",
+    "        return results\n",
+    "\n",
     "    genres = genres_request()\n",
     "\n",
     "    for index, movie_id in enumerate(cleaned_links):\n",
@@ -134,9 +100,10 @@
     "            \"Authorization\": f\"Bearer {tmdb_token}\"\n",
     "        }\n",
     "\n",
-    "        response = requests.get(url, headers=headers)\n",
+    "        try:\n",
+    "            response = requests.get(url, headers=headers)\n",
+    "            response.raise_for_status()  # Vérifier que la requête a réussi\n",
     "\n",
-    "        if response.status_code == 200:\n",
     "            data = response.json()\n",
     "\n",
     "            if data[\"movie_results\"]:\n",
@@ -154,29 +121,73 @@
     "                    \"genres\": [genres[str(genre_id)] for genre_id in movie_info['genre_ids']]\n",
     "                }\n",
     "            else:\n",
-    "                results[str(index)] = {\"error\": f\"Request failed with status code {response.status_code}\"}\n",
+    "                results[str(index)] = {\"error\": f\"Aucun résultat trouvé pour l'ID IMDb {movie_id}\"}\n",
     "\n",
-    "    return results\n",
-    "\n"
+    "        except requests.RequestException as e:\n",
+    "            results[str(index)] = {\"error\": f\"Erreur lors de la requête TMDB : {e}\"}\n",
+    "\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'0': {'tmdb_id': 1241982, 'title': 'Moana 2', 'genre_ids': [16, 12, 10751, 35], 'imbd_id': '13622970', 'date': '2024-11-21', 'year': '2024', 'genres': ['Animation', 'Adventure', 'Family', 'Comedy']}, '1': {'tmdb_id': 402431, 'title': 'Wicked', 'genre_ids': [18, 10749, 14], 'imbd_id': '1262426', 'date': '2024-11-20', 'year': '2024', 'genres': ['Drama', 'Romance', 'Fantasy']}, '2': {'tmdb_id': 558449, 'title': 'Gladiator II', 'genre_ids': [28, 12, 36], 'imbd_id': '9218128', 'date': '2024-11-05', 'year': '2024', 'genres': ['Action', 'Adventure', 'History']}, '3': {'tmdb_id': 857598, 'title': 'Pushpa 2 - The Rule', 'genre_ids': [80, 28, 53], 'imbd_id': '16539454', 'date': '2024-12-04', 'year': '2024', 'genres': ['Crime', 'Action', 'Thriller']}, '4': {'tmdb_id': 845781, 'title': 'Red One', 'genre_ids': [28, 35, 14], 'imbd_id': '14948432', 'date': '2024-10-31', 'year': '2024', 'genres': ['Action', 'Comedy', 'Fantasy']}, '5': {'tmdb_id': 157336, 'title': 'Interstellar', 'genre_ids': [12, 18, 878], 'imbd_id': '0816692', 'date': '2014-11-05', 'year': '2014', 'genres': ['Adventure', 'Drama', 'Science Fiction']}, '6': {'tmdb_id': 1357633, 'title': 'Solo Leveling -ReAwakening-', 'genre_ids': [28, 12, 14, 16], 'imbd_id': '33428606', 'date': '2024-11-26', 'year': '2024', 'genres': ['Action', 'Adventure', 'Fantasy', 'Animation']}, '7': {'error': 'Request failed with status code 200'}, '8': {'tmdb_id': 1094274, 'title': 'Y2K', 'genre_ids': [35, 27, 878], 'imbd_id': '27218960', 'date': '2024-12-06', 'year': '2024', 'genres': ['Comedy', 'Horror', 'Science Fiction']}, '9': {'tmdb_id': 1206617, 'title': 'The Best Christmas Pageant Ever', 'genre_ids': [10751, 35, 18], 'imbd_id': '2347285', 'date': '2024-11-07', 'year': '2024', 'genres': ['Family', 'Comedy', 'Drama']}}\n"
+      "{'0': {'tmdb_id': 1241982, 'title': 'Moana 2', 'genre_ids': [16, 12, 10751, 35], 'imbd_id': '13622970', 'date': '2024-11-21', 'year': '2024', 'genres': ['Animation', 'Adventure', 'Family', 'Comedy']}, '1': {'tmdb_id': 402431, 'title': 'Wicked', 'genre_ids': [18, 10749, 14], 'imbd_id': '1262426', 'date': '2024-11-20', 'year': '2024', 'genres': ['Drama', 'Romance', 'Fantasy']}, '2': {'tmdb_id': 558449, 'title': 'Gladiator II', 'genre_ids': [28, 12, 36], 'imbd_id': '9218128', 'date': '2024-11-05', 'year': '2024', 'genres': ['Action', 'Adventure', 'History']}, '3': {'tmdb_id': 857598, 'title': 'Pushpa 2 - The Rule', 'genre_ids': [80, 28, 53], 'imbd_id': '16539454', 'date': '2024-12-04', 'year': '2024', 'genres': ['Crime', 'Action', 'Thriller']}, '4': {'tmdb_id': 845781, 'title': 'Red One', 'genre_ids': [28, 35, 14], 'imbd_id': '14948432', 'date': '2024-10-31', 'year': '2024', 'genres': ['Action', 'Comedy', 'Fantasy']}, '5': {'tmdb_id': 157336, 'title': 'Interstellar', 'genre_ids': [12, 18, 878], 'imbd_id': '0816692', 'date': '2014-11-05', 'year': '2014', 'genres': ['Adventure', 'Drama', 'Science Fiction']}, '6': {'tmdb_id': 1357633, 'title': 'Solo Leveling -ReAwakening-', 'genre_ids': [28, 12, 14, 16], 'imbd_id': '33428606', 'date': '2024-11-26', 'year': '2024', 'genres': ['Action', 'Adventure', 'Fantasy', 'Animation']}, '7': {'error': \"Aucun résultat trouvé pour l'ID IMDb 34422601\"}, '8': {'tmdb_id': 1094274, 'title': 'Y2K', 'genre_ids': [35, 27, 878], 'imbd_id': '27218960', 'date': '2024-12-06', 'year': '2024', 'genres': ['Comedy', 'Horror', 'Science Fiction']}, '9': {'tmdb_id': 1206617, 'title': 'The Best Christmas Pageant Ever', 'genre_ids': [10751, 35, 18], 'imbd_id': '2347285', 'date': '2024-11-07', 'year': '2024', 'genres': ['Family', 'Comedy', 'Drama']}}\n"
      ]
     }
    ],
    "source": [
-    "results = api_tmdb_request()\n",
+    "result = api_tmdb_request()\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moana 2 (2024) - Genres: Animation,Adventure,Family,Comedy - IMDb ID: 13622970 - TMDB ID: 1241982\n",
+      "Wicked (2024) - Genres: Drama,Romance,Fantasy - IMDb ID: 1262426 - TMDB ID: 402431\n",
+      "Gladiator II (2024) - Genres: Action,Adventure,History - IMDb ID: 9218128 - TMDB ID: 558449\n",
+      "Pushpa 2 - The Rule (2024) - Genres: Crime,Action,Thriller - IMDb ID: 16539454 - TMDB ID: 857598\n",
+      "Red One (2024) - Genres: Action,Comedy,Fantasy - IMDb ID: 14948432 - TMDB ID: 845781\n",
+      "Interstellar (2014) - Genres: Adventure,Drama,Science Fiction - IMDb ID: 816692 - TMDB ID: 157336\n",
+      "Solo Leveling -ReAwakening- (2024) - Genres: Action,Adventure,Fantasy,Animation - IMDb ID: 33428606 - TMDB ID: 1357633\n",
+      "Ignoré: Aucun résultat trouvé pour l'ID IMDb 34422601\n",
+      "Y2K (2024) - Genres: Comedy,Horror,Science Fiction - IMDb ID: 27218960 - TMDB ID: 1094274\n",
+      "The Best Christmas Pageant Ever (2024) - Genres: Family,Comedy,Drama - IMDb ID: 2347285 - TMDB ID: 1206617\n"
+     ]
+    }
+   ],
+   "source": [
+    "for movie_key, movie_info in result.items():\n",
+    "    if 'error' in movie_info:\n",
+    "                print(f\"Ignoré: {movie_info['error']}\")\n",
+    "                continue\n",
     "\n",
-    "print(results)"
+    "    required_fields = ['title', 'year', 'genres', 'imbd_id', 'tmdb_id']\n",
+    "    if not all(field in movie_info for field in required_fields):\n",
+    "        print(f\"Champs manquants pour l'entrée {movie_key}: {movie_info}\")\n",
+    "        continue\n",
+    "\n",
+    "    title = movie_info[\"title\"]\n",
+    "    year = int(movie_info[\"year\"])\n",
+    "    genres_str = ','.join(movie_info[\"genres\"])\n",
+    "    imdb_id = int(movie_info[\"imbd_id\"])\n",
+    "    tmdb_id = int(movie_info[\"tmdb_id\"])\n",
+    "\n",
+    "    print(f\"{title} ({year}) - Genres: {genres_str} - IMDb ID: {imdb_id} - TMDB ID: {tmdb_id}\")\n",
+    "\n"
    ]
   },
   {
