--- a/notebooks/2_recommandation_KNN.ipynb
+++ b/notebooks/2_recommandation_KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_ratings(ratings_csv: str, data_dir: str = \"/home/antoine/Ml_Ops_Movies_Reco/src/data/data/raw\") -> pd.DataFrame:\n",
+    "def read_ratings(ratings_csv: str, data_dir: str = \"/home/antoine/PROJET_MLOPS_RECO_MOVIES/data/raw/silver\") -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Lit le fichier CSV contenant les évaluations des films.\n",
     "\n",
@@ -32,7 +32,7 @@
     "    print(\"Dataset ratings chargé\")\n",
     "    return data\n",
     "\n",
-    "def read_movies(movies_csv: str, data_dir: str = \"/home/antoine/Ml_Ops_Movies_Reco/src/data/data/raw\") -> pd.DataFrame:\n",
+    "def read_movies(movies_csv: str, data_dir: str = \"/home/antoine/PROJET_MLOPS_RECO_MOVIES/data/raw/silver\") -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Lit le fichier CSV contenant les informations sur les films.\n",
     "\n",
@@ -46,32 +46,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "L'ensemble de données des films doit être nettoyé de deux manières :\n",
-    "- les genres sont exprimés sous forme de chaîne avec un pipe\n",
-    "- le titre contient actuellement (année) ajouté à la fin. Nous allons extraire l'année de chaque chaîne de titre et créer une nouvelle colonne pour celle-ci."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dataset ratings chargé\n",
       "Dataset movies chargé\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_16036/900422629.py:7: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  movies.fillna(method='ffill', inplace= True)\n"
      ]
     },
     {
@@ -95,7 +79,106 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>movieId</th>\n",
+       "      <th>userid</th>\n",
+       "      <th>movieid</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>bayesian_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1112486027</td>\n",
+       "      <td>3.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1112484676</td>\n",
+       "      <td>3.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1112484819</td>\n",
+       "      <td>3.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1112484727</td>\n",
+       "      <td>4.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1112484580</td>\n",
+       "      <td>4.32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userid  movieid  rating   timestamp  bayesian_mean\n",
+       "0       1        2     3.5  1112486027           3.21\n",
+       "1       1       29     3.5  1112484676           3.89\n",
+       "2       1       32     3.5  1112484819           3.89\n",
+       "3       1       47     3.5  1112484727           4.04\n",
+       "4       1       50     3.5  1112484580           4.32"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings = read_ratings(\"processed_ratings.csv\")\n",
+    "movies = read_movies(\"processed_movies.csv\")\n",
+    "\n",
+    "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieid</th>\n",
        "      <th>title</th>\n",
        "      <th>genres</th>\n",
        "      <th>year</th>\n",
@@ -106,35 +189,35 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>Toy Story</td>\n",
-       "      <td>[Adventure, Animation, Children, Comedy, Fantasy]</td>\n",
+       "      <td>Adventure, Animation, Children, Comedy, Fantasy</td>\n",
        "      <td>1995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Jumanji</td>\n",
-       "      <td>[Adventure, Children, Fantasy]</td>\n",
+       "      <td>Adventure, Children, Fantasy</td>\n",
        "      <td>1995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Grumpier Old Men</td>\n",
-       "      <td>[Comedy, Romance]</td>\n",
+       "      <td>Comedy, Romance</td>\n",
        "      <td>1995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>Waiting to Exhale</td>\n",
-       "      <td>[Comedy, Drama, Romance]</td>\n",
+       "      <td>Comedy, Drama, Romance</td>\n",
        "      <td>1995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>Father of the Bride Part II</td>\n",
-       "      <td>[Comedy]</td>\n",
+       "      <td>Comedy</td>\n",
        "      <td>1995</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -142,62 +225,37 @@
        "</div>"
       ],
       "text/plain": [
-       "   movieId                        title  \\\n",
+       "   movieid                        title  \\\n",
        "0        1                    Toy Story   \n",
        "1        2                      Jumanji   \n",
        "2        3             Grumpier Old Men   \n",
        "3        4            Waiting to Exhale   \n",
        "4        5  Father of the Bride Part II   \n",
        "\n",
-       "                                              genres  year  \n",
-       "0  [Adventure, Animation, Children, Comedy, Fantasy]  1995  \n",
-       "1                     [Adventure, Children, Fantasy]  1995  \n",
-       "2                                  [Comedy, Romance]  1995  \n",
-       "3                           [Comedy, Drama, Romance]  1995  \n",
-       "4                                           [Comedy]  1995  "
+       "                                            genres  year  \n",
+       "0  Adventure, Animation, Children, Comedy, Fantasy  1995  \n",
+       "1                     Adventure, Children, Fantasy  1995  \n",
+       "2                                  Comedy, Romance  1995  \n",
+       "3                           Comedy, Drama, Romance  1995  \n",
+       "4                                           Comedy  1995  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies = read_movies('movies.csv')\n",
-    "# Split sur les pipes\n",
-    "movies['genres'] = movies['genres'].apply(lambda x: x.split(\"|\"))\n",
-    "# Extraction de l'année et mise à jour du titre\n",
-    "movies['year'] = movies['title'].str.extract(r'\\((\\d{4})\\)')[0]\n",
-    "movies['title'] = movies['title'].str.replace(r' \\(\\d{4}\\)', '', regex=True)\n",
-    "movies.fillna(method='ffill', inplace= True)\n",
     "movies.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 27278 entries, 0 to 27277\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column   Non-Null Count  Dtype \n",
-      "---  ------   --------------  ----- \n",
-      " 0   movieId  27278 non-null  int64 \n",
-      " 1   title    27278 non-null  object\n",
-      " 2   genres   27278 non-null  object\n",
-      " 3   year     27278 non-null  object\n",
-      "dtypes: int64(1), object(3)\n",
-      "memory usage: 852.6+ KB\n"
-     ]
-    }
-   ],
    "source": [
-    "movies.info()"
+    "L'ensemble de données des films doit être nettoyé de deux manières :\n",
+    "- les genres sont exprimés sous forme de chaîne avec un pipe\n",
+    "- le titre contient actuellement (année) ajouté à la fin. Nous allons extraire l'année de chaque chaîne de titre et créer une nouvelle colonne pour celle-ci."
    ]
   },
   {
@@ -252,13 +310,6 @@
     "\n",
     "genre_frequency"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -339,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +405,7 @@
     "    - user_inv_mapper: mappe l'index utilisateur à l'ID utilisateur\n",
     "    - movie_inv_mapper: mappe l'index du film à l'ID du film\n",
     "    Args:\n",
-    "        df: pandas dataframe contenant 3 colonnes (userId, movieId, rating)\n",
+    "        df: pandas dataframe contenant 3 colonnes (userid, movieId, rating)\n",
     "\n",
     "    Returns:\n",
     "        X: sparse matrix\n",
@@ -363,17 +414,17 @@
     "        movie_mapper: dict that maps movie id's to movie indices\n",
     "        movie_inv_mapper: dict that maps movie indices to movie id's\n",
     "    \"\"\"\n",
-    "    M = df['userId'].nunique()\n",
-    "    N = df['movieId'].nunique()\n",
+    "    M = df['userid'].nunique()\n",
+    "    N = df['movieid'].nunique()\n",
     "\n",
-    "    user_mapper = dict(zip(np.unique(df[\"userId\"]), list(range(M))))\n",
-    "    movie_mapper = dict(zip(np.unique(df[\"movieId\"]), list(range(N))))\n",
+    "    user_mapper = dict(zip(np.unique(df[\"userid\"]), list(range(M))))\n",
+    "    movie_mapper = dict(zip(np.unique(df[\"movieid\"]), list(range(N))))\n",
     "\n",
-    "    user_inv_mapper = dict(zip(list(range(M)), np.unique(df[\"userId\"])))\n",
-    "    movie_inv_mapper = dict(zip(list(range(N)), np.unique(df[\"movieId\"])))\n",
+    "    user_inv_mapper = dict(zip(list(range(M)), np.unique(df[\"userid\"])))\n",
+    "    movie_inv_mapper = dict(zip(list(range(N)), np.unique(df[\"movieid\"])))\n",
     "\n",
-    "    user_index = [user_mapper[i] for i in df['userId']]\n",
-    "    item_index = [movie_mapper[i] for i in df['movieId']]\n",
+    "    user_index = [user_mapper[i] for i in df['userid']]\n",
+    "    item_index = [movie_mapper[i] for i in df['movieid']]\n",
     "\n",
     "    X = csr_matrix((df[\"rating\"], (user_index,item_index)), shape=(M,N))\n",
     "\n",
@@ -385,26 +436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset ratings chargé\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ratings = read_ratings('ratings.csv')\n",
     "\n",
     "X, user_mapper, movie_mapper, user_inv_mapper, movie_inv_mapper = create_X(ratings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2532,7 +2574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
