:construction: Update python_train_models in progress

--- a/notebooks/test_Antoine.ipynb
+++ b/notebooks/test_Antoine.ipynb
@@ -27891,6 +27891,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_info = {'1': {'title': 'Harakiri', 'vote_average': 8.4, 'poster_path': 'http://image.tmdb.org/t/p/w185/w7pWcLaYQkbtRUn99K6ome0DblL.jpg'}, '2': {'title': 'A Man Escaped', 'vote_average': 8.0, 'poster_path': 'http://image.tmdb.org/t/p/w185/gkoZ8fFib24zhB2DKpjQ09SK9FU.jpg'}, '3': {'title': 'The Shawshank Redemption', 'vote_average': 8.709, 'poster_path': 'http://image.tmdb.org/t/p/w185/9cqNxx0GxF0bflZmeSMuL5tnGzr.jpg'}, '4': {'title': 'Come and See', 'vote_average': 8.2, 'poster_path': 'http://image.tmdb.org/t/p/w185/qNbMsKVzigERgJUbwf8pKyZogpb.jpg'}, '5': {'title': \"I Know Where I'm Going!\", 'vote_average': 7.066, 'poster_path': 'http://image.tmdb.org/t/p/w185/i0Tq9xHqjlm3TjMYAJEq3hFnpQb.jpg'}, '6': {'title': 'Ordet', 'vote_average': 7.9, 'poster_path': 'http://image.tmdb.org/t/p/w185/e3oh96Zrqdaku8DoD10pXZHLZoU.jpg'}, '7': {'title': 'Ashes and Diamonds', 'vote_average': 7.4, 'poster_path': 'http://image.tmdb.org/t/p/w185/rA7Rr0j8NfgxLaxvtItz9rc1iiT.jpg'}, '8': {'title': 'Shoah', 'vote_average': 8.3, 'poster_path': 'http://image.tmdb.org/t/p/w185/8hr8NdnMygKF2Mbu3eDDQCB5lKg.jpg'}, '9': {'title': 'A Separation', 'vote_average': 7.89, 'poster_path': 'http://image.tmdb.org/t/p/w185/wQVvASmpm8jGhJBQU20OkoMcNzi.jpg'}, '10': {'title': 'Pather Panchali', 'vote_average': 7.9, 'poster_path': 'http://image.tmdb.org/t/p/w185/oyd0SEzYrBfw8GP7eGJpOUKxytr.jpg'}, '11': {'title': 'The Godfather', 'vote_average': 8.689, 'poster_path': 'http://image.tmdb.org/t/p/w185/3bhkrj58Vtu7enYsRolD1fZdja1.jpg'}, '12': {'title': 'A Short Film About Love', 'vote_average': 7.8, 'poster_path': 'http://image.tmdb.org/t/p/w185/2sdDzstQtN0eMOtmqVmtUyknKeH.jpg'}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def display_movies_grid(movies_info):\n",
+    "    # Créer trois lignes principales\n",
+    "    rows = [\n",
+    "        st.columns(4) for _ in range(3)\n",
+    "    ]  # Crée une liste de 3 lignes avec 4 colonnes chacune\n",
+    "\n",
+    "    # Diviser les films entre les lignes et colonnes\n",
+    "    for idx, movie_info in movies_info.items():\n",
+    "        idx = int(idx) - 1\n",
+    "        row_idx = idx // 4  # Déterminer la ligne (0, 1 ou 2)\n",
+    "        col_idx = idx % 4  # Déterminer la colonne (0 à 3)\n",
+    "\n",
+    "        # Vérifier que nous ne dépassons pas le nombre de lignes\n",
+    "        if row_idx < len(rows):\n",
+    "            with rows[row_idx][col_idx]:\n",
+    "                html_content = f\"\"\"\n",
+    "                <div class=\"movie-container\">\n",
+    "                    <div class=\"movie-tile\">\n",
+    "                        <img src=\"{movie_info['poster_path']}\" alt=\"{movie_info['title']}\">\n",
+    "                    </div>\n",
+    "                    <div class=\"overlay\">\n",
+    "                        <h5 style=\"color: white;\">{movie_info['title']}</h5>\n",
+    "                        <p class=\"rating-badge\">{round(movie_info['vote_average'], 1)} ⭐️</p>\n",
+    "                    </div>\n",
+    "                </div>\n",
+    "                \"\"\"\n",
+    "                st.markdown(html_content, unsafe_allow_html=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 0, Row: 0, Column: 0\n",
+      "Index: 1, Row: 0, Column: 1\n",
+      "Index: 2, Row: 0, Column: 2\n",
+      "Index: 3, Row: 0, Column: 3\n",
+      "Index: 4, Row: 1, Column: 0\n",
+      "Index: 5, Row: 1, Column: 1\n",
+      "Index: 6, Row: 1, Column: 2\n",
+      "Index: 7, Row: 1, Column: 3\n",
+      "Index: 8, Row: 2, Column: 0\n",
+      "Index: 9, Row: 2, Column: 1\n",
+      "Index: 10, Row: 2, Column: 2\n",
+      "Index: 11, Row: 2, Column: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, movie_info in movies_info.items():\n",
+    "    idx = int(idx) - 1\n",
+    "    row_idx = idx // 4  # Déterminer la ligne (0, 1 ou 2)\n",
+    "    col_idx = idx % 4  # Déterminer la colonne (0 à 3)\n",
+    "    print(f\"Index: {idx}, Row: {row_idx}, Column: {col_idx}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -27913,7 +27990,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
