:hammer: Update models

--- a/notebooks/3_Filtrage_contenu.ipynb
+++ b/notebooks/3_Filtrage_contenu.ipynb
@@ -170,7 +170,7 @@
    "source": [
     "Le nombre de lignes (27278) correspond au nombre de films dans notre DataFrame. Quant au nombre de colonnes (24), ceci correspond au nombre de mots importants.\n",
     "\n",
-    "Ensuite on va calculer la similarité entre chaque livre.\n",
+    "Ensuite on va calculer la similarité entre chaque films.\n",
     "\n",
     "Les fonctions cosine_similarity et euclidean_distances de la bibliothèque sklearn.metrics.pairwise font le calcul de la similarité cosinus et distance euclidienne, respectivement."
    ]
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,27 @@
       "|                 Shrek the Third                  |         1.0         |\n",
       "|             Tale of Despereaux, The              |         1.0         |\n",
       "| Asterix and the Vikings (Astérix et les Vikings) |         1.0         |\n",
-      "+--------------------------------------------------+---------------------+\n",
+      "+--------------------------------------------------+---------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('RECOMMNDATION SIMILARITES EUCLIDIENNE')\n",
+    "print(recommandations('Toy Story', sim_euclidienne))\n",
+    "\n",
+    "print('RECOMMNDATION SIMILARITES COSINUS')\n",
+    "print(recommandations('Toy Story', sim_cosinus))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "RECOMMNDATION SIMILARITES EUCLIDIENNE\n",
       "+-----------------------------------------------------------------------------------------+---------------------+\n",
       "|                                          Titre                                          | Score de similarité |\n",
@@ -293,16 +313,62 @@
     }
    ],
    "source": [
-    "print('RECOMMNDATION SIMILARITES EUCLIDIENNE')\n",
-    "print(recommandations('Toy Story', sim_euclidienne))\n",
-    "\n",
-    "print('RECOMMNDATION SIMILARITES COSINUS')\n",
-    "print(recommandations('Toy Story', sim_cosinus))\n",
     "\n",
     "print('RECOMMNDATION SIMILARITES EUCLIDIENNE')\n",
     "print(recommandations(\"Jumanji\", sim_euclidienne))\n",
+    "\n",
     "print('RECOMMNDATION SIMILARITES COSINUS')\n",
     "print(recommandations(\"Jumanji\", sim_cosinus))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RECOMMNDATION SIMILARITES EUCLIDIENNE\n",
+      "+------------------+---------------------+\n",
+      "|      Titre       | Score de similarité |\n",
+      "+------------------+---------------------+\n",
+      "|     Watchmen     | 0.7619054173908016  |\n",
+      "|     Super 8      |  0.681165859931987  |\n",
+      "|     RoboCop      | 0.6633518691564102  |\n",
+      "|  V for Vendetta  | 0.6538652070480034  |\n",
+      "|   Transformers   | 0.6538652070480034  |\n",
+      "| I Am Number Four | 0.6538652070480034  |\n",
+      "|    Battleship    | 0.6538652070480034  |\n",
+      "|    Iron Man 3    | 0.6538652070480034  |\n",
+      "|     Riddick      | 0.6538652070480034  |\n",
+      "|    Real Steel    |  0.632399421375637  |\n",
+      "+------------------+---------------------+\n",
+      "RECOMMNDATION SIMILARITES COSINUS\n",
+      "+------------------+---------------------+\n",
+      "|      Titre       | Score de similarité |\n",
+      "+------------------+---------------------+\n",
+      "|     Watchmen     |  0.95117222786691   |\n",
+      "|     Super 8      | 0.8904546630767742  |\n",
+      "|     RoboCop      | 0.8712241263553305  |\n",
+      "|  V for Vendetta  | 0.8598851844948696  |\n",
+      "|   Transformers   | 0.8598851844948696  |\n",
+      "| I Am Number Four | 0.8598851844948696  |\n",
+      "|    Battleship    | 0.8598851844948696  |\n",
+      "|    Iron Man 3    | 0.8598851844948696  |\n",
+      "|     Riddick      | 0.8598851844948696  |\n",
+      "|    Real Steel    | 0.8310572928052438  |\n",
+      "+------------------+---------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('RECOMMNDATION SIMILARITES EUCLIDIENNE')\n",
+    "print(recommandations(\"Inception\", sim_euclidienne))\n",
+    "\n",
+    "print('RECOMMNDATION SIMILARITES COSINUS')\n",
+    "print(recommandations(\"Inception\", sim_cosinus))"
    ]
   },
   {
@@ -329,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
