--- a/notebooks/test_predict.ipynb
+++ b/notebooks/test_predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,13 @@
     "from pydantic import BaseModel\n",
     "import requests\n",
     "import logging\n",
-    "\n"
+    "from surprise import Reader\n",
+    "from surprise import Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +179,7 @@
        "4       1       50     3.5  1112484580           4.32"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +285,7 @@
        "4                                           Comedy  1995  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +377,7 @@
        "4        5  113041   11862"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -504,6 +505,7 @@
     }
    ],
    "source": [
+    "df = pd.merge(ratings, movies[['movieid', 'genres']], on = 'movieid', how = 'left')\n",
     "model_svd = load_model(\"model_SVD.pkl\")\n",
     "# Chargement de la matrice cosinus similarity\n",
     "similarity_cosinus = np.load(\"/home/antoine/PROJET_MLOPS_RECO_MOVIES/data/models/cosine_similarity_matrix.npy\")\n",
@@ -517,8 +519,82 @@
     "imdb_dict = dict(zip(movies_links_df[\"movieid\"], movies_links_df[\"imdbid\"]))\n",
     "# Créer une liste de tous les titres de films\n",
     "all_titles = movies[\"title\"].tolist()\n",
-    "\n",
     "print(\"############ FIN DES CHARGEMENTS ############\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_user_recommendations(\n",
+    "    ratings_df, user_id: int, model: SVD, n_recommendations: int = 24\n",
+    "):\n",
+    "    \"\"\"Obtenir des recommandations pour un utilisateur donné.\"\"\"\n",
+    "    # Initialiser une liste vide pour stocker les paires (utilisateur, movie) pour le jeu \"anti-testset\"\n",
+    "    anti_testset = []\n",
+    "    # Convertir l'ID de l'utilisateur externe en l'ID interne utilisé par Surprise\n",
+    "    targetUser = train_set.to_inner_uid(user_id)\n",
+    "    # Obtenir la valeur de remplissage à utiliser (moyenne globale des notes du jeu d'entraînement)\n",
+    "    moyenne = train_set.global_mean\n",
+    "    # Obtenir les évaluations de l'utilisateur cible pour les movies\n",
+    "    user_note = train_set.ur[targetUser]\n",
+    "    # Extraire la liste des movies notés par l'utilisateur\n",
+    "    user_movie = [item for (item,_) in (user_note)]\n",
+    "    # Obtenir toutes les notations du jeu d'entraînement\n",
+    "    ratings = train_set.all_ratings()\n",
+    "    # Boucle sur tous les items du jeu d'entraînement\n",
+    "    for movie in train_set.all_items():\n",
+    "    # Si l'item n'a pas été noté par l'utilisateur\n",
+    "        if movie not in user_movie:\n",
+    "            # Ajouter la paire (utilisateur, movie, valeur de remplissage) à la liste \"anti-testset\"\n",
+    "            anti_testset.append((user_id, train_set.to_raw_iid(movie), moyenne))\n",
+    "    predictionsSVD = model.test(anti_testset)\n",
+    "    # Convertir les prédictions en un DataFrame pandas\n",
+    "    predictionsSVD = pd.DataFrame(predictionsSVD)\n",
+    "    # Trier les prédictions par la colonne 'est' (estimation) en ordre décroissant\n",
+    "    predictionsSVD.sort_values(by=['est'], inplace=True, ascending=False)\n",
+    "    # Afficher les 10 meilleures prédictions\n",
+    "    return predictionsSVD[\"iid\"].values[:n_recommendations]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[26082  8684  6818  4194  6981  7238 94466  6896 89759   668   858 38159\n",
+      " 26171 93040  6271 77658  6433   904 86290  8459  7578  2920  7502  7938]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = get_user_recommendations(ratings, 35022, model_svd, 24)\n",
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[26082  8684  6818  4194  6981  7238 94466  6896 89759   668   858 38159\n",
+      " 26171 93040  6271   527 77658    50  6433   904  2324 86290  8459  7578]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_2 = get_user_recommendations(ratings, 50, model_svd, 24)\n",
+    "print(test_2)"
    ]
   },
   {
@@ -1283,6 +1359,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_n_recommendations(user_id, n=10):\n",
+    "    user_movies = df[df['userid'] == user_id]['movieid'].unique()\n",
+    "    all_movies = df['movieid'].unique()\n",
+    "    movies_to_predict = list(set(all_movies) - set(user_movies))\n",
+    "\n",
+    "    user_movie_pairs = [(user_id, movie_id, 0) for movie_id in movies_to_predict]\n",
+    "    predictions_cf = model_svd.test(user_movie_pairs)\n",
+    "\n",
+    "    top_n_recommendations = sorted(predictions_cf, key = lambda x: x.est)[:n]\n",
+    "\n",
+    "    for pred in top_n_recommendations:\n",
+    "        predicted_rating = pred.est\n",
+    "        print(predicted_rating)\n",
+    "\n",
+    "\n",
+    "    top_n_movie_ids = [int(pred.iid) for pred in top_n_recommendations]\n",
+    "\n",
+    "    return top_n_movie_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2775692102727265\n",
+      "1.460825985769735\n",
+      "1.4923238585404381\n",
+      "1.496890155428611\n",
+      "1.52659282051723\n",
+      "1.5448081295962317\n",
+      "1.5906162961613841\n",
+      "1.6113855284500447\n",
+      "1.6223927486700045\n",
+      "1.6603796628748584\n",
+      "Top 5 Recommendations for User 221:\n",
+      "1.Turbo: A Power Rangers Movie\n",
+      "2.Barney's Great Adventure\n",
+      "3.Glitter\n",
+      "4.From Justin to Kelly\n",
+      "5.Gigli\n",
+      "6.SuperBabies: Baby Geniuses 2\n",
+      "7.Son of the Mask\n",
+      "8.Epic Movie\n",
+      "9.Bratz: The Movie\n",
+      "10.Disaster Movie\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_id = 221\n",
+    "recommendations = get_top_n_recommendations(user_id)\n",
+    "top_n_movies_titles = movies[movies['movieid'].isin(recommendations)]['title'].tolist()\n",
+    "print(f\"Top 5 Recommendations for User {user_id}:\")\n",
+    "for i, title in enumerate(top_n_movies_titles, 1):\n",
+    "    print(f\"{i}.{title}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2775692102727265\n",
+      "1.460825985769735\n",
+      "1.4923238585404381\n",
+      "1.496890155428611\n",
+      "1.52659282051723\n",
+      "1.5448081295962317\n",
+      "1.5906162961613841\n",
+      "1.6113855284500447\n",
+      "1.6223927486700045\n",
+      "1.6603796628748584\n",
+      "Top 5 Recommendations for User 20560:\n",
+      "1.Turbo: A Power Rangers Movie\n",
+      "2.Barney's Great Adventure\n",
+      "3.Glitter\n",
+      "4.From Justin to Kelly\n",
+      "5.Gigli\n",
+      "6.SuperBabies: Baby Geniuses 2\n",
+      "7.Son of the Mask\n",
+      "8.Epic Movie\n",
+      "9.Bratz: The Movie\n",
+      "10.Disaster Movie\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_id = 20560\n",
+    "recommendations = get_top_n_recommendations(user_id)\n",
+    "top_n_movies_titles = movies[movies['movieid'].isin(recommendations)]['title'].tolist()\n",
+    "print(f\"Top 5 Recommendations for User {user_id}:\")\n",
+    "for i, title in enumerate(top_n_movies_titles, 1):\n",
+    "    print(f\"{i}.{title}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1305,7 +1491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
