:hammer: Update models

--- a/notebooks/5_Filtrage co_hybride.ipynb
+++ b/notebooks/5_Filtrage co_hybride.ipynb
@@ -826,6 +826,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pickle\n",
+    "import joblib\n",
     "\n",
     "def pred_item(mat_ratings, item_similarity, k, user_id):\n",
     "    # Sélectionner dans mat_ratings les films qui n'ont pas été encore lu par le user\n",
